# PGx_ClinicalTrial

./: .gitignore  main.py  pubchem_features.csv  pyproject.toml  test_fixed_logic.py  using_data.ipynb
prototype/: engine.py  flask_app.py  pbpk_model.py
prototype/_bak/: app.py
prototype/app/: flask_app.py
prototype/app/static/js/: app.js
prototype/app/templates/: index.html
prototype/data/: activity_scores.json  allele_frequencies.json  cpic_drug_gene_map.csv  cpic_drug_gene_map.json
prototype/models/: __init__.py  engine.py
prototype/scripts/data/: CPIC.ipynb
prototype/scripts/test/: check_requests.py  population.ipynb  test.ipynb
prototype/static/css/: style.css
