[project]
name = "big"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "matplotlib",
    "seaborn",
    "plotly",
    "scikit-learn",
    "statsmodels",
    "lightgbm",
    "xgboost",
    "pmdarima",
    "arch",
    "tqdm",
    "python-dotenv",
    "ipywidgets>=8.1.8",
    "ipykernel>=7.1.0",
    "tensorflow>=2.20.0",
    "keras>=3.12.0",
    "koreanize-matplotlib>=0.1.1",
    "requests>=2.32.5",
    "dash>=3.3.0",
    "dash-bootstrap-components>=2.0.4",
]
